# Snapling-Engine

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
common/: PCH.hpp
include/: Button.hpp  Category.hpp  CodeBlock.hpp  Costume.hpp  Engine.hpp  Entity.hpp  Global.hpp  Grid.hpp  PanelBlocks.hpp  PopUp.hpp  PropertiesBox.hpp  Sprite.hpp  TypeBlock.hpp  TypeBox.hpp  Window.hpp
source/: BlockTypePanel.cpp  Button.cpp  Category.cpp  CodeBlock.cpp  Costume.cpp  Engine.cpp  Entity.cpp  Grid.cpp  PanelBlocks.cpp  PopUp.cpp  PropertiesBox.cpp  Sprite.cpp  TypeBlock.cpp  TypeBox.cpp  Window.cpp
source/include/: BlockTypePanel.hpp  Button.hpp  Category.hpp  CodeBlock.hpp  Costume.hpp  Engine.hpp  Entity.hpp  Global.hpp  Grid.hpp  PanelBlocks.hpp  PopUp.hpp  PropertiesBox.hpp  Sprite.hpp  TypeBlock.hpp  TypeBox.hpp  Window.hpp
source/include/common/: PCH.hpp
